--- a/src/ThemeToggle/styles.scss
+++ b/src/ThemeToggle/styles.scss
@@ -30,7 +30,7 @@
       transform-origin: center center;
     }
 
-    > :is(.moon, .sun) {
+    > :is(.moon, .sun, .stars) {
       fill: var(--icon-fill);
     }
 
@@ -50,7 +50,9 @@
       transition:
         transform 0.25s var(--ease-out),
         translatex 0.25s var(--ease-out),
-        translatey 0.25s var(--ease-out);
+        translatey 0.25s var(--ease-out),
+        scale 0.25s var(--ease-out),
+        opacity 0.25s var(--ease-out);
     }
   }
 
@@ -58,6 +60,18 @@
     --icon-fill: hsl(210deg 10% 70%);
     --icon-fill-hover-body: hsl(210deg 15% 90%);
     --icon-fill-hover-beam: hsl(210deg 15% 90%);
+
+    .sun-and-moon > .stars {
+      translate: 12px 2px;
+      transform: scale(1);
+      opacity: 1;
+      transition:
+        transform 0.25s 0.5s var(--ease-out),
+        translatex 0.25s 0.5s var(--ease-out),
+        translatey 0.25s 0.5s var(--ease-out),
+        scale 0.25s 0.5s var(--ease-out),
+        opacity 0.25s 0.5s var(--ease-out);
+    }
 
     .sun-and-moon > .sun {
       transform: scale(1.75);
@@ -79,6 +93,14 @@
   }
 
   :root.light & {
+    .sun-and-moon > .stars {
+      transform: scale(0.1);
+      opacity: 0;
+      transition:
+        scale 0s 0s var(--ease-out),
+        opacity 0s 0s var(--ease-out);
+    }
+
     .sun-and-moon > .sun {
       transform: scale(1);
       transition-delay: 0.25s;
@@ -89,7 +111,7 @@
     .sun-and-moon > :is(.sun-beams-left, .sun-beams-right) {
       opacity: 1;
       transform: rotateZ(-25deg);
-      transition-delay: 0.25s;
+      transition-delay: 0.5s;
       transition-duration: 0.15s;
     }
 
@@ -104,6 +126,13 @@
     --icon-fill-hover-body: hsl(210deg 50% 25%);
     --icon-fill-hover-beam: hsl(210deg 15% 90%);
 
+    .sun-and-moon > .stars {
+      transform: scale(0.1);
+      opacity: 0;
+      transition:
+        scale 0.25s 0s var(--ease-out),
+        opacity 0.25s 0s var(--ease-out);
+    }
     .sun-and-moon > .sun {
       transform: scale(1);
       transition-duration: 0.25s;
@@ -125,7 +154,7 @@
 }
 
 #theme-toggle:is(:hover, :focus-visible) .sun-and-moon {
-  > :is(.moon, .sun) {
+  > :is(.moon, .sun, .stars) {
     fill: var(--icon-fill-hover-body);
   }
 
